# DesignPatternInAdvancedCpp

./: CMakeLists.txt  DesignPatternInAdvancedCpp.kdev4  README.md
source/: CMakeLists.txt
source/01_ThisPointer/: 01_C_SimpleExample.cpp  01_C_testSimpleExample.cpp  02_N_Member.cpp  02_N_testMember.cpp  03_N_StaticMember.cpp  03_N_testStaticMember.cpp  04_C_CallCheck.cpp  04_C_testCallCheck.cpp  05_C_NullInstance.cpp  05_C_testNullInstance.cpp  06_C_NullInstancePrevent.cpp  06_C_testNullInstancePrevent.cpp  07_C_FunctionPointer.cpp  07_C_testFunctionPointer.cpp  08_C_MemberFunctionPointer.cpp  08_C_testMemberFunctionPointer.cpp  CMakeLists.txt
source/02_SendingThisPointer/: 01_C_Thread.cpp  01_C_testThread.cpp  02_C_ThreadInClass.cpp  02_C_testThreadInClass.cpp  03_C_Timer.cpp  03_C_testTimer.cpp  04_C_TimerForId.cpp  04_C_testTimerForId.cpp  05_C_Condition.cpp  05_C_testCondition.cpp  06_C_ConditionOverride.cpp  06_C_testConditionOverride.cpp  CMakeLists.txt
source/03_Casting/: 01_C_StaticCast.cpp  01_C_testStaticCast.cpp  02_C_DynamicCast.cpp  02_C_testDynamicCast.cpp  03_C_ReinterpretCast.cpp  03_C_testReinterpretCast.cpp  04_C_ConstCast.cpp  04_C_testConstCast.cpp  CMakeLists.txt
source/04_Adapter/: 01_C_StackFromList.cpp  02_C_StackFromDeque.cpp  CMakeLists.txt
source/05_VirtualFunction/: 01_C_VirtualFunction.cpp  02_C_VirtualSize.cpp  03_C_DynamicVirtual.cpp  04_C_ReinterpretVirtual.cpp  CMakeLists.txt
source/06_LSP/: 01_C_LSP.cpp  CMakeLists.txt
source/07_Prototype/: 01_C_Prototype.cpp  CMakeLists.txt
source/08_TemplateMethod/: CMakeLists.txt  (+2 more)
(+9 files in other folders)
